[project]
name = "agentlightning"
version = "0.1.2"
description = "Agent Lightning is the absolute trainer to light up AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz",
  "psutil",
  "setproctitle",
  "flask",
  "agentops<=0.4.18",
  "httpdbg",
  "uvicorn",
  "fastapi",
  "aiohttp",
  "gdown>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "hatch",
  "pytest-asyncio",
  "pre-commit",
  "pytest-rerunfailures",
  "black",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-authors-plugin",
  "mkdocs-macros-plugin",
]
experiment = [
  "random-word",
]
agent = [
  "autogen-agentchat",
  "autogen-ext[openai]",
  "litellm[proxy]",
  "mcp",
  "openai-agents",
  "langgraph",
  "langchain[openai]",
  "langchain-community",
  "langchain-text-splitters",
  "sqlparse",
  "nltk",
  "uv",
]
train = [
  # Core deep learning stack (GPU wheels: adjust index-url when installing)
  "torch==2.7.0",
  "torchvision==0.22.0",
  "torchaudio==2.7.0",
  # High-performance attention kernels (build from source if wheel not available)
  "flash-attn",
  # Inference engine
  "vllm==0.9.2",
  # VERL for RL training
  "verl==0.5.0",
  # Ray for distributed coordination used in verl entrypoints
  "ray[default]",
]

[tool.uv.extra-build-dependencies]
"flash-attn" = ["torch==2.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlightning"]
include = ["**/*.yaml", "**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
